2. Added iterated Farlie-Gumbel-Morgenstern copula as FGMrcop(), which is any more
       useful than the existing generalization, but Chine and Benatia (2017) concern
       themselves with the iterated FGM.
3. Documentation audit again with tiny changes to many Rds.
4. Added glueCOP() as another means of constructing other copulas.


POTENTIAL TODOs:

lcomCOPpv() <--> vuongCOP() work as now lcomCOP() is available.
lcomCOPpv() might need some reworking too.

If two-parameter Galambos (Joe, 2014, p. 198) is not materially broader than
the one-parameter, does this hold for a two-parameter Gumbel hinted by
Joe (2014, p. 199)? Further investigation is needed.

Note: Joe's 2-p GHcop does appear different from Brahimi et. al (2015) version
of a 2-p GHcop. Should support for both be made? Are both the same? (Quick testing suggests that perhaps they are not, but mathematical checking has not been made [01/09/2019]).

Add the trimmed L-comoments? 

\author{William Asquith \email{william.asquith@ttu.edu} }
  Make such conversions throughout or go back to W.H. Asquith?

EMPIRcopdf() can be replaced by EMPIRcop() as the later is fully 
  vectorized itself and makes presumably a lesser impact on memory (faster)?

stabtaildepf.Rd --- Need to audit stabtaildepf.Rd and complete documentation.
Beirlant, J., Escobar-Bach, M., Goegebeur, Y., Guillou, A.: Bias-corrected estimation of stable tail dependence function. J. Multivar. Anal. 143, 453–466 (2016)
https://doi.org/10.1016/j.jmva.2015.10.006
Kiriliouk, A., Segers, J. & Tafakori, L. Extremes (2018) 21: 581. https://doi.org/10.1007/s10687-018-0315-y


EMPIRcop.Rd --- Need to audit level.curves in the Examples.

Implementation of state-of-the-practice nonparametric estimators of
  lower and upper tail dependence parameters. Neither of the three books
  cited within deal with this. A turn towards recommended literature by
  Joe (2014) is needed.

Goodness-of-fit of the Kendall Function following Genest et. al. (2006,