@@ -5,7 +5,9 @@ function(f=0.5, u=seq(0.01,0.99, by=0.01), empinv=NULL,
    ix <- 1:length(cols)
    ix.needed <- ix[as.character(cols) == as.character(f)]
    if(length(ix.needed) != 1) {
-      warning("F value does not match against column names in empinv")
+      warning("f value does not match against row names in empinv, ",
+              "likely source of this is a real number with too many digits ",
+              "relative to a keyed entry")
       return(data.frame(U=NA, V=NA))
    }
    U.available <- attributes(empinv)$rownames
@@ -17,6 +19,7 @@ function(f=0.5, u=seq(0.01,0.99, by=0.01), empinv=NULL,
    if(lowess) {
       lws <- lowess(z$U, y=z$V, f=f.lowess)
       z <- data.frame(U=lws$x, V=lws$y)
+      z$V[z$V < 0] <- 0; z$V[z$V > 1] <- 1 # -WHA 2019/06/28 (found a case)
    }
    return(z)
 }
