@@ -5,7 +5,9 @@ function(f=0.5, v=seq(0.01,0.99, by=0.01), empinv=NULL,
    ix <- 1:length(rows)
    ix.needed <- ix[as.character(rows) == as.character(f)]
    if(length(ix.needed) != 1) {
-      warning("F value does not match against row names in empinv")
+      warning("f value does not match against row names in empinv, ",
+              "likely source of this is a real number with too many digits ",
+              "relative to a keyed entry")
       return(data.frame(U=NA, V=NA))
    }
    V.available <- attributes(empinv)$colnames
@@ -17,6 +19,7 @@ function(f=0.5, v=seq(0.01,0.99, by=0.01), empinv=NULL,
    if(lowess) {
       lws <- lowess(z$V, y=z$U, f=f.lowess)
       z <- data.frame(U=lws$y, V=lws$x)
+      z$U[z$U < 0] <- 0; z$U[z$U > 1] <- 1 # -WHA 2019/06/28 (found a case)
    }
    return(z)
 }
